--- a/app/src/main/res/menu/nav.xml
+++ b/app/src/main/res/menu/nav.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+    <group android:id="@+id/top_nav">
 
     <item
         android:id="@+id/home"
@@ -11,4 +13,9 @@
         android:id="@+id/about"
         android:icon="@drawable/ic_audiotrack_dark"
         android:title="About" />
+    </group>
+    <item
+        android:id="@+id/contect"
+        android:icon="@drawable/ic_checked_checkbox"
+        android:title="Contatc" />
 </menu>
